📚 Auto-update: News data refreshed - 2025-12-24 18:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -28566,5 +28566,37 @@
         "published": "Wed, 24 Dec 2025 12:43:39 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Krishna Enterprises\u2019 founder turns 14 years of ancestral cane work into a growing MSME, with orders beyond Uttar Pradesh and a women\u2019s group in town."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/24/the-european-startup-markets-data-doesnt-match-its-energy-yet/",
+        "title": "The European startup market\u2019s data doesn\u2019t match its energy \u2014 yet",
+        "link": "https://techcrunch.com/2025/12/24/the-european-startup-markets-data-doesnt-match-its-energy-yet/",
+        "published": "Wed, 24 Dec 2025 18:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Europe's startup market hasn't produced meaningful numbers but there is reason to believe the data will start to change."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/849637/anker-laptop-power-bank-xbox-series-x-deal-sale",
+        "title": "Anker\u2019s beefy Laptop Power Bank has returned to its Black Friday low",
+        "link": "https://www.theverge.com/gadgets/849637/anker-laptop-power-bank-xbox-series-x-deal-sale",
+        "published": "2025-12-24T13:00:00-05:00",
+        "source": "The Verge",
+        "summary": "As you might expect, things have been relatively quiet on the deals front since Black Friday, particularly when it comes to discounts on charging accessories. Thankfully, Anker\u2019s aptly titled Laptop Power Bank is once again on sale at Amazon and Walmart for $87.99 ($47 off), which matches the record-low price we last saw at the [&#8230;]"
+    },
+    {
+        "id": "https://www.timothychambers.net/2025/12/23/my-open-social-web-predictions.html",
+        "title": "My 2026 Open Social Web Predictions",
+        "link": "https://www.timothychambers.net/2025/12/23/my-open-social-web-predictions.html",
+        "published": "Wed, 24 Dec 2025 15:59:23 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46376652\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/lenovo-thinkbook-plus-gen-6-rollable-review/",
+        "title": "I tried Lenovo's $3,000 rollable ThinkBook and can't go back to regular-sized laptops",
+        "link": "https://www.zdnet.com/article/lenovo-thinkbook-plus-gen-6-rollable-review/",
+        "published": "Wed, 24 Dec 2025 18:01:35 GMT",
+        "source": "Latest news",
+        "summary": "First shown off at CES, Lenovo's ThinkBook Plus Gen 6 features an extendable 120Hz OLED display. Here's my verdict after using it for weeks."
     }
 ]
