📚 Auto-update: News data refreshed - 2025-12-24 21:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -28686,5 +28686,29 @@
         "published": "Thu, 25 Dec 2025 00:45:42 +0530",
         "source": "Tech-Economic Times",
         "summary": "As of December 22, Tim Cook held about 105,000 shares, according to the filing released on Tuesday."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/24/the-year-data-centers-went-from-backend-to-center-stage/",
+        "title": "The year data centers went from backend to center stage",
+        "link": "https://techcrunch.com/2025/12/24/the-year-data-centers-went-from-backend-to-center-stage/",
+        "published": "Wed, 24 Dec 2025 20:16:41 +0000",
+        "source": "TechCrunch",
+        "summary": "Data centers are no longer the boring tech issue they once were."
+    },
+    {
+        "id": "https://yougov.co.uk/technology/articles/53241-european-political-monthly-where-do-europeans-stand-on-social-media-regulation",
+        "title": "European Majority favours more social media regulation",
+        "link": "https://yougov.co.uk/technology/articles/53241-european-political-monthly-where-do-europeans-stand-on-social-media-regulation",
+        "published": "Wed, 24 Dec 2025 19:32:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46378469\">Comments</a>"
+    },
+    {
+        "id": "https://inc42.com/buzz/add-women-only-ride-option-govt-to-cab-aggregators/",
+        "title": "Add Women-Only Ride Option: Govt To Cab Aggregators",
+        "link": "https://inc42.com/buzz/add-women-only-ride-option-govt-to-cab-aggregators/",
+        "published": "Wed, 24 Dec 2025 20:23:25 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Add Women-Only Ride Option: Govt To Cab Aggregators\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/female-only-ride-option-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The transport ministry (MoRTH) has reportedly made fresh amendments to the Motor Vehicles Aggregators Guidelines, 2025.\u00a0 As per Economic Times,&#8230;"
     }
 ]
