📚 Auto-update: News data refreshed - 2025-12-24 22:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -28710,5 +28710,29 @@
         "published": "Wed, 24 Dec 2025 20:23:25 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Add Women-Only Ride Option: Govt To Cab Aggregators\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/female-only-ride-option-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The transport ministry (MoRTH) has reportedly made fresh amendments to the Motor Vehicles Aggregators Guidelines, 2025.\u00a0 As per Economic Times,&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/24/nvidia-acquires-ai-chip-challenger-groq-for-20b-report-says/",
+        "title": "Nvidia acquires AI chip challenger Groq for $20B, report says",
+        "link": "https://techcrunch.com/2025/12/24/nvidia-acquires-ai-chip-challenger-groq-for-20b-report-says/",
+        "published": "Wed, 24 Dec 2025 22:03:16 +0000",
+        "source": "TechCrunch",
+        "summary": "With Groq on its side, Nvidia is poised to become even more dominant in chip manufacturing."
+    },
+    {
+        "id": "https://gwern.net/spaced-repetition",
+        "title": "Spaced Repetition for Efficient Learning",
+        "link": "https://gwern.net/spaced-repetition",
+        "published": "Wed, 24 Dec 2025 20:48:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46379076\">Comments</a>"
+    },
+    {
+        "id": "https://www.cnbc.com/2025/12/24/nvidia-buying-ai-chip-startup-groq-for-about-20-billion-biggest-deal.html",
+        "title": "Nvidia buying AI chip startup Groq for about $20B in cash",
+        "link": "https://www.cnbc.com/2025/12/24/nvidia-buying-ai-chip-startup-groq-for-about-20-billion-biggest-deal.html",
+        "published": "Wed, 24 Dec 2025 21:02:15 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46379183\">Comments</a>"
     }
 ]
