--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -28750,5 +28750,77 @@
         "published": "Wed, 24 Dec 2025 22:43:53 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46380075\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/2025-christmas-day-nfl-games-how-to-watch-full-streaming-schedule-and-more-233022362.html?src=rss",
+        "title": "2025 Christmas Day NFL games: How to watch, full streaming schedule and more",
+        "link": "https://www.engadget.com/entertainment/streaming/2025-christmas-day-nfl-games-how-to-watch-full-streaming-schedule-and-more-233022362.html?src=rss",
+        "published": "Wed, 24 Dec 2025 23:30:22 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Christmas Day famously belongs to football. This Dec. 25, there are three NFL games to watch: the Dallas Cowboys vs. Washington Commanders, the Detroit Lions vs. the Minnesota Vikings, and the Denver Broncos vs. Kansas City Chiefs. Here's what you need to know about Thursday's football slate, and the rest of the Week 17 schedule.&nbsp;</p> \n<h2 id=\"jump-link-how-to-watch-the-seattle-seahawks-vs-arizona-cardinals-game\">How to watch the NFL Christmas Day games:&nbsp;</h2> \n<p>\n </p> \n<p>\n </p> "
+    },
+    {
+        "id": "https://news.ycombinator.com/item?id=46380168",
+        "title": "Tell HN: Merry Christmas",
+        "link": "https://news.ycombinator.com/item?id=46380168",
+        "published": "Wed, 24 Dec 2025 22:56:00 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46380168\">Comments</a>"
+    },
+    {
+        "id": "https://ivanca.github.io/programming/2025/11/26/microsoft-pls-get-your-tab-to-autocomplete-shit-together/",
+        "title": "Microsoft please get your tab to autocomplete shit together",
+        "link": "https://ivanca.github.io/programming/2025/11/26/microsoft-pls-get-your-tab-to-autocomplete-shit-together/",
+        "published": "Wed, 24 Dec 2025 23:33:15 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46380475\">Comments</a>"
+    },
+    {
+        "id": "https://www.youtube.com/watch?v=oYU2hAbx_Fc",
+        "title": "Who Watches the Waymos? I do [video]",
+        "link": "https://www.youtube.com/watch?v=oYU2hAbx_Fc",
+        "published": "Thu, 25 Dec 2025 00:10:12 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46380758\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/meity-to-showcase-100-local-apps-at-its-ai-impact-summit/articleshow/126165634.cms",
+        "title": "MeitY to showcase 100 local apps at its AI Impact Summit",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/meity-to-showcase-100-local-apps-at-its-ai-impact-summit/articleshow/126165634.cms",
+        "published": "Thu, 25 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Focus on AI-driven solutions for grassroot challenges across global south"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/double-h-1b-whammy-narrowing-path-to-the-grand-american-dream/articleshow/126165602.cms",
+        "title": "Double H-1B whammy narrowing path to the grand American dream",
+        "link": "https://economictimes.indiatimes.com/tech/technology/double-h-1b-whammy-narrowing-path-to-the-grand-american-dream/articleshow/126165602.cms",
+        "published": "Thu, 25 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Wage-based selection process and $100,000 fees loom over upcoming H-1B lottery season"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/2025-year-in-review-meet-top-free-agents-of-startups-and-tech/articleshow/126165564.cms",
+        "title": "2025 Year in Review: Meet top free agents of startups and tech",
+        "link": "https://economictimes.indiatimes.com/tech/startups/2025-year-in-review-meet-top-free-agents-of-startups-and-tech/articleshow/126165564.cms",
+        "published": "Thu, 25 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Flipkart Group entities, including its quick commerce unit Minutes, fashion portal Myntra, and online travel agency Cleartrip saw multiple departures this year resulting in free agents. This includes Kabeer Biswas, founder of Dunzo, who stepped down from Flipkart Minutes in October, less than a year after taking charge of the business."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/2025-year-in-review-ipo-offline-push-and-mas-change-maths-for-test-prep-sector/articleshow/126165262.cms",
+        "title": "2025 Year in Review: IPO, offline push and M&amp;As change maths for test-prep sector",
+        "link": "https://economictimes.indiatimes.com/tech/startups/2025-year-in-review-ipo-offline-push-and-mas-change-maths-for-test-prep-sector/articleshow/126165262.cms",
+        "published": "Thu, 25 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "India\u2019s test-preparation segment stayed resilient in 2025 even as large parts of edtech grappled with post-pandemic fatigue, slower enrolments, and weak business models. The year was divergent for the sector: PhysicsWallah went public, while Unacademy is negotiating a sale to Upgrad at a fraction of its peak valuation."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/rise-of-microcompanionship-social-media-2-0-is-changing-the-conversation/articleshow/126164875.cms",
+        "title": "Rise of microcompanionship: Social media 2.0 is changing the conversation",
+        "link": "https://economictimes.indiatimes.com/tech/startups/rise-of-microcompanionship-social-media-2-0-is-changing-the-conversation/articleshow/126164875.cms",
+        "published": "Thu, 25 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "India\u2019s creator economy is branching out beyond short videos and livestreams, quietly building a parallel income stream around paid conversations, voice chats, and virtual gifting \u2014 especially in smaller towns. A new crop of \u201cmicro-companionship\u201d apps is gaining traction by monetising one-on-one and small-group interactions rather than mass reach."
     }
 ]
