--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -28822,5 +28822,21 @@
         "published": "Thu, 25 Dec 2025 06:00:00 +0530",
         "source": "Tech-Economic Times",
         "summary": "India\u2019s creator economy is branching out beyond short videos and livestreams, quietly building a parallel income stream around paid conversations, voice chats, and virtual gifting \u2014 especially in smaller towns. A new crop of \u201cmicro-companionship\u201d apps is gaining traction by monetising one-on-one and small-group interactions rather than mass reach."
+    },
+    {
+        "id": "https://github.com/hkjarral/Asterisk-AI-Voice-Agent",
+        "title": "Asterisk AI Voice Agent",
+        "link": "https://github.com/hkjarral/Asterisk-AI-Voice-Agent",
+        "published": "Wed, 24 Dec 2025 23:25:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46380399\">Comments</a>"
+    },
+    {
+        "id": "https://inc42.com/buzz/urban-company-in-2025-outage-at-rapido-more/",
+        "title": "Urban Company In 2025, Outage At Rapido & More",
+        "link": "https://inc42.com/buzz/urban-company-in-2025-outage-at-rapido-more/",
+        "published": "Thu, 25 Dec 2025 02:30:22 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Urban Company In 2025, Outage At Rapido &amp; More\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-Daily-Brief-61.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Wishing you a happy Christmas from everyone at Inc42. Happy holidays! Urban Company\u2019s Momentous 2025\u00a0 For Urban Company, 2025 was&#8230;"
     }
 ]
