📚 Auto-update: News data refreshed - 2025-12-25 03:55 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -28838,5 +28838,29 @@
         "published": "Thu, 25 Dec 2025 02:30:22 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Urban Company In 2025, Outage At Rapido &amp; More\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-Daily-Brief-61.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Wishing you a happy Christmas from everyone at Inc42. Happy holidays! Urban Company\u2019s Momentous 2025\u00a0 For Urban Company, 2025 was&#8230;"
+    },
+    {
+        "id": "https://labs.acme.byu.edu/Pages/intro.html",
+        "title": "Python Applied Mathematics Labs",
+        "link": "https://labs.acme.byu.edu/Pages/intro.html",
+        "published": "Thu, 25 Dec 2025 03:33:52 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46381839\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/nvidia-joining-big-tech-deal-spree-to-license-groq-technology-hire-executives/articleshow/126169570.cms",
+        "title": "Nvidia, joining Big Tech deal spree, to license Groq technology, hire executives",
+        "link": "https://economictimes.indiatimes.com/tech/technology/nvidia-joining-big-tech-deal-spree-to-license-groq-technology-hire-executives/articleshow/126169570.cms",
+        "published": "Thu, 25 Dec 2025 08:27:44 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Nvidia has licensed chip technology from startup Groq and hired its CEO, a former Google AI veteran. This deal follows a trend of tech giants acquiring talent and technology without full acquisitions. While Nvidia leads AI training, Groq specializes in inference, a more competitive market. Groq will continue operating independently."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/creators-turn-micro-companions-test-prep-sectors-challenging-year/articleshow/126169331.cms",
+        "title": "Creators turn micro companions; Test-prep sector\u2019s challenging year",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/creators-turn-micro-companions-test-prep-sectors-challenging-year/articleshow/126169331.cms",
+        "published": "Thu, 25 Dec 2025 08:13:11 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Happy Thursday and Merry Christmas! The creator economy in India is going beyond traditional content by lending a virtual ear to its audience. This and more in today\u2019s ETtech Morning Dispatch."
     }
 ]
