📚 Auto-update: News data refreshed - 2025-12-25 05:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -28862,5 +28862,13 @@
         "published": "Thu, 25 Dec 2025 08:13:11 +0530",
         "source": "Tech-Economic Times",
         "summary": "Happy Thursday and Merry Christmas! The creator economy in India is going beyond traditional content by lending a virtual ear to its audience. This and more in today\u2019s ETtech Morning Dispatch."
+    },
+    {
+        "id": "https://www.windowslatest.com/2025/12/24/microsoft-denies-rewriting-windows-11-using-ai-after-an-employees-one-engineer-one-month-one-million-code-post-on-linkedin-causes-outrage/",
+        "title": "Microsoft denies rewriting Windows 11 in Rust using AI",
+        "link": "https://www.windowslatest.com/2025/12/24/microsoft-denies-rewriting-windows-11-using-ai-after-an-employees-one-engineer-one-month-one-million-code-post-on-linkedin-causes-outrage/",
+        "published": "Thu, 25 Dec 2025 03:26:58 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46381813\">Comments</a>"
     }
 ]
