--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -28870,5 +28870,29 @@
         "published": "Thu, 25 Dec 2025 03:26:58 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46381813\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/sealy-promo-code/",
+        "title": "Sealy Promo Code: Save $200 on Mattresses This Month",
+        "link": "https://www.wired.com/story/sealy-promo-code/",
+        "published": "Thu, 25 Dec 2025 06:10:00 +0000",
+        "source": "WIRED",
+        "summary": "Whether you\u2019re switching from springs to memory foam or just want to sleep cooler this summer, these Sealy mattress deals will have you waking up refreshed\u2014and with cash left in your wallet."
+    },
+    {
+        "id": "https://blocksandfiles.com/2025/12/17/jedec-sphbm4/",
+        "title": "JEDEC developing reduced pin count HBM4 standard to enable higher capacity",
+        "link": "https://blocksandfiles.com/2025/12/17/jedec-sphbm4/",
+        "published": "Thu, 18 Dec 2025 16:11:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46314540\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/delivery-workers-call-for-all-india-strike-on-december-25-and-31/articleshow/126170678.cms",
+        "title": "Delivery workers call for all India strike on December 25 and 31",
+        "link": "https://economictimes.indiatimes.com/tech/technology/delivery-workers-call-for-all-india-strike-on-december-25-and-31/articleshow/126170678.cms",
+        "published": "Thu, 25 Dec 2025 11:00:59 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Delivery workers for Zomato, Swiggy, Zepto, Blinkit, Amazon, and Flipkart plan a strike on December 25 and 31. The Indian Federation of App-Based Transport Workers and Telangana Gig and Platform Workers Union are leading the action. They demand job security, higher pay, safer conditions, and social security benefits. This protest highlights concerns over worker welfare amidst platform company profits."
     }
 ]
