--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -28894,5 +28894,21 @@
         "published": "Thu, 25 Dec 2025 11:00:59 +0530",
         "source": "Tech-Economic Times",
         "summary": "Delivery workers for Zomato, Swiggy, Zepto, Blinkit, Amazon, and Flipkart plan a strike on December 25 and 31. The Indian Federation of App-Based Transport Workers and Telangana Gig and Platform Workers Union are leading the action. They demand job security, higher pay, safer conditions, and social security benefits. This protest highlights concerns over worker welfare amidst platform company profits."
+    },
+    {
+        "id": "https://www.ruby-lang.org/en/news/2025/12/25/ruby-4-0-0-released/",
+        "title": "Ruby 4.0.0 Released",
+        "link": "https://www.ruby-lang.org/en/news/2025/12/25/ruby-4-0-0-released/",
+        "published": "Thu, 25 Dec 2025 04:13:00 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46382011\">Comments</a>"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/deeptech-funding-gathers-speed-uavs-for-modern-warfare",
+        "title": "Deeptech funding gathers speed; UAVs for modern warfare",
+        "link": "https://yourstory.com/2025/12/deeptech-funding-gathers-speed-uavs-for-modern-warfare",
+        "published": "Thu, 25 Dec 2025 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The coming year could see VCs writing larger cheques to deeptech companies. Apollyon Dynamics is building high-speed kamikaze drones. In the forests of Jawadhu Hills, a low-cost sanitation solution is giving tribal school children safety and dignity."
     }
 ]
