📚 Auto-update: News data refreshed - 2025-12-25 08:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -28910,5 +28910,21 @@
         "published": "Thu, 25 Dec 2025 02:00:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "The coming year could see VCs writing larger cheques to deeptech companies. Apollyon Dynamics is building high-speed kamikaze drones. In the forests of Jawadhu Hills, a low-cost sanitation solution is giving tribal school children safety and dignity."
+    },
+    {
+        "id": "https://www.wired.com/story/tuft-and-needle-promo-code/",
+        "title": "Tuft & Needle Promo Codes: 20% Off | December 2025",
+        "link": "https://www.wired.com/story/tuft-and-needle-promo-code/",
+        "published": "Thu, 25 Dec 2025 07:10:00 +0000",
+        "source": "WIRED",
+        "summary": "Save 20% on best-selling mattresses with our top Tuft & Needle coupon codes."
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/best-microsd-card-130038282.html?src=rss",
+        "title": "The best microSD cards in 2026",
+        "link": "https://www.engadget.com/computing/accessories/best-microsd-card-130038282.html?src=rss",
+        "published": "Thu, 25 Dec 2025 08:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Most microSD cards are fast enough for stashing photos, recording video and transferring files, but some will get you a little more bang for your buck than others. If you\u2019re looking to boost the storage of your <a href=\"https://www.engadget.com/gaming/nintendo/switch-2/\">Nintendo Switch 2</a>, <a href=\"https://www.engadget.com/steam-deck-oled-review-its-just-better-180038030.html\">Steam Deck</a>, <a href=\"https://www.engadget.com/tag/gopro/\">GoPro</a> or any other device that still accepts mi"
     }
 ]
