📚 Auto-update: News data refreshed - 2025-12-25 10:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -28934,5 +28934,37 @@
         "published": "Thu, 25 Dec 2025 08:23:31 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Gig Workers Union Calls For Nationwide Strike On December 25, 31\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/gigworker-03-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Gig workers of ecommerce and foodtech platforms like Swiggy, Zomato, Blinkit, Amazon, and Flipkart have called for a nationwide strike&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/wolf-dna-lurks-in-many-modern-dog-breeds/",
+        "title": "\u2018Wolf DNA\u2019 Lurks in Many Modern Dog Breeds",
+        "link": "https://www.wired.com/story/wolf-dna-lurks-in-many-modern-dog-breeds/",
+        "published": "Thu, 25 Dec 2025 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Although wolf-canine interbreeding has been considered extremely rare, the latest research shows that many present-day canines carry a small amount of wolf genes."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nintendo/best-nintendo-switch-2-games-070007467.html?src=rss",
+        "title": "The best Nintendo Switch 2 games for 2026",
+        "link": "https://www.engadget.com/gaming/nintendo/best-nintendo-switch-2-games-070007467.html?src=rss",
+        "published": "Thu, 25 Dec 2025 10:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>One of the best things about the Switch 2 is how familiar it feels if you have used any previous Switch console. You can still move between handheld and TV play without thinking about it, and most of your favorite games come along for the ride. <a href=\"https://www.nintendo.com/us/gaming-systems/switch-2/transfer-guide/compatible-games/?srsltid=AfmBOoqAC2jYvG-B0lRjrvYhoxg-a62kHClzhZlDeeRpY4QuDm-Np24f\">Nintendo\u2019s compatibility page</a> highlights the rare titles with quirks, while its <a href="
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/25/1130298/ai-wrapped-the-14-ai-terms-you-couldnt-avoid-in-2025/",
+        "title": "AI Wrapped: The 14 AI terms you couldn\u2019t avoid in 2025",
+        "link": "https://www.technologyreview.com/2025/12/25/1130298/ai-wrapped-the-14-ai-terms-you-couldnt-avoid-in-2025/",
+        "published": "Thu, 25 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "If the past 12 months have taught us anything, it\u2019s that the AI hype train is showing no signs of slowing. It\u2019s hard to believe that at the beginning of the year, DeepSeek had yet to turn the entire industry on its head, Meta was better known for trying (and failing) to make the metaverse&#8230;"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/saharanpur-entrepreneur-veerpal-singh-cm-udyami",
+        "title": "Saharanpur entrepreneur scales electrical repair shop with Rs 5 lakh interest-free support",
+        "link": "https://yourstory.com/2025/12/saharanpur-entrepreneur-veerpal-singh-cm-udyami",
+        "published": "Wed, 24 Dec 2025 14:02:41 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Founder-owner leverages a state CM Udyami scheme to buy machines, hire two to three workers, and train ITI students in Lakhanor village."
     }
 ]
